--- a/etc/nginx/sites-available/development.conf
+++ b/etc/nginx/sites-available/development.conf
@@ -2,62 +2,7 @@ server {
     listen  80;
     charset utf-8;
 	server_name codeine.local;
-	root   /usr/share/php/Codeine/Public;
-	index  index.php;
 
-	location / {
-		try_files $uri $uri/ /index.php?$uri&$args;
-	}
 
-  	location ~ .php$
-  	{
-        fastcgi_param  Environment Development;
-
-		fastcgi_pass   127.0.0.1:9000;
-		fastcgi_index  index.php;
-
-		include fastcgi_params;
-
-		fastcgi_param  DOCUMENT_ROOT    $document_root;
-		fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-		fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_script_name;
-
-		fastcgi_param  QUERY_STRING     $query_string;
-		fastcgi_param  REQUEST_METHOD   $request_method;
-		fastcgi_param  CONTENT_TYPE     $content_type;
-		fastcgi_param  CONTENT_LENGTH   $content_length;
-
-		fastcgi_intercept_errors        on;
-		fastcgi_ignore_client_abort     off;
-
-		fastcgi_connect_timeout 60;
-		fastcgi_send_timeout 180;
-		fastcgi_read_timeout 180;
-		fastcgi_buffer_size 512k;
-		fastcgi_buffers 8 512k;
-		fastcgi_busy_buffers_size 512k;
-		fastcgi_temp_file_write_size 512k;
-	}
-	
-	location = /favicon.ico {
-		log_not_found off;
-		expires           max;
-		access_log off;
-	}
-	location = /robots.txt {
-		allow all;
-		log_not_found off;
-		access_log off;
-	}
-	## Disable viewing .htaccess & .htpassword 
-	location ~ /\.ht {
-		deny  all;
-	}
-
-    location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|woff|eot)$
-	{
-		access_log        off;
-		expires           max;
-		add_header    Cache-Control  public;
-	}
+	include /etc/nginx/codeine;
 }
