--- a/etc/nginx/sites-available/codeine-development.conf
+++ b/etc/nginx/sites-available/codeine-development.conf
@@ -1,6 +1,9 @@
 server {
     listen  80;
-	server_name codeine.local;
+	server_name *.local;
+
+    set $Environment Development;
+	root /var/www/$host/Public;
 
 	include /etc/nginx/conf.d/codeine;
 }
