--- a/src/Options/Project.json
+++ b/src/Options/Project.json
@@ -5,11 +5,6 @@
         "Short": "Short description goes here",
         "Full": "Full description goes here"
     },
-    "Version":
-    {
-        "Project": "0.1",
-        "Codeine": "7.8"
-    },
     "Humans":
     {
         "Anybody":
@@ -21,13 +16,13 @@
     "Events":
     {
         "Started": 1354001901,
-        "Released": 0
+        "Released": 1370458657
     },
     "Copyright":
     {
         "License": "",
-        "Rights": "",
-        "Year": 2012
+        "Rights": "ONE2TEAM",
+        "Year": 2013
     },
     "Links":
     {
