--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
     <property name="homepage" value="http://one2team.ru/projects/Codeine"/>
     <property name="maintainer" value="Johnny Funt"/>
     <property name="destination-source" value="/usr/share/php/Codeine"/>
-    <property name="depends" value="php5-fpm (>=5.4.12) | php5-cli (>=5.4.12)"/>
+    <property name="depends" value="php5-fpm (>=5.4.16) | php5-cli (>=5.4.16) | php5-cgi (>=5.4.16)"/>
 
     <target name="phase1" depends="properties"></target>
 
