--- a/etc/nginx/conf.d/access.conf
+++ b/etc/nginx/conf.d/access.conf
@@ -1,1 +1,4 @@
-log_format codeine '$status $request_time $remote_addr $time_local "$request" "$http_user_agent" "$http_referer"';
+log_format codeine '$status $request_time $remote_addr $time_local "$request"
+"$http_user_agent"
+"$http_referer"
+';
