New Application Starter. Second version.

--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -4,6 +4,7 @@
     {
         "Method": "Do"
     },
+    "Inherited": ["Hooks", "IP", "UA", "Language", "Session"],
     "Hooks":
     {
         "beforeApplicationRun":
