--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -1,4 +1,9 @@
 {
+    "Renderer":
+    {
+        "Service": "View.HTML",
+        "Method": "Render"
+    },
     "Context": "app",
     "Run":
     {
