Bugfixes and new CSS/JS tag.

--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -28,8 +28,8 @@
         {
             "Rendering":
             {
-                "Service":"View",
-                "Method":"Render"
+                "Service":"View.HTML",
+                "Method":"Pipeline"
             }
         },
         "NotFound":
