--- a/src/Options/Project.json
+++ b/src/Options/Project.json
@@ -26,7 +26,7 @@
     },
     "Hosts":
     {
-        "Development":"reputator.local",
-        "Production": "reputator.one2team.ru"
+        "Development":"project.local",
+        "Production": "project.ru"
     }
 }
