--- a/etc/nginx/sites-enabled/codeine-development.conf
+++ b/etc/nginx/sites-enabled/codeine-development.conf
@@ -1,8 +1,8 @@
 server {
     listen  80;
-	server_name $hostname;
+	server_name *.local;
 
-    set $Environment Production;
+    set $Environment Development;
 	root /var/www/$host/Public;
 
 	include /etc/nginx/conf.d/codeine;
