--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -28,7 +28,7 @@
             },
             "Access":
             {
-                "Service": "Code.Flow.Front.Access",
+                "Service": "Code.Flow.Application.Access",
                 "Method": "Check"
             },
             "Cache":
