--- a/etc/nginx/sites-available/codeine-development.conf
+++ b/etc/nginx/sites-available/codeine-development.conf
@@ -6,5 +6,6 @@ server
     set $Environment Development;
 	root /var/www/$host/Public;
 
-	include /etc/nginx/conf.d/codeine;
+	set $Backend 127.0.0.1:9000;
+    include /etc/nginx/conf.d/codeine;
 }
