--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -1,4 +1,14 @@
 {
+    "Contract":
+    {
+        "Code.Flow.Application":
+        {
+            "Run":
+            {
+                "Memo": ["Run", "Time", "Session"]
+            }
+        }
+    },
     "View":
     {
         "Renderer":
