--- a/build.xml
+++ b/build.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project name="codeine-${branch}" default="final" basedir=".">
 
-    <import file="build/initialize.xml"/>
+<import file="build/initialize.xml"/>
+<import file="build/phplint.xml"/>
+<import file="build/phpcs.xml"/>
+<import file="build/phploc.xml"/>
+<import file="build/phpcpd.xml"/>
+<import file="build/pmd.xml"/>
+<import file="build/phpunit.xml"/>
+<import file="build/pdepend.xml"/>
 
-    <import file="build/debian.xml"/>
+<import file="build/phpdoc.xml"/>
 
-    <property name="homepage" value="http://trickyplan.ru/projects/Codeine"/>
-    <property name="maintainer" value="Johnny Funt"/>
-    <property name="destination-source" value="/usr/share/php/Codeine"/>
-    <property name="depends" value="php5-fpm (>=5.6.0) | php5-cli (>=5.6.0) | php5-cgi (>=5.6.0)"/>
+<import file="build/debian.xml"/>
+<import file="build/tarball.xml"/>
 
-    <target name="phase1" depends="properties"></target>
+<property name="description" value="Codeine functional PHP Framework"/>
+<property name="homepage" value="http://codeine-framework.ru"/>
+<property name="maintainer" value="Johnny Funt"/>
+<property name="destination-source" value="/usr/share/php/Codeine"/>
+<property name="depends" value="php5-fpm (>=5.6.0) | php5-cli (>=5.6.0) | php5-cgi (>=5.6.0)"/>
 
-    <!-- Source code checks -->
-    <target name="phase2" depends="phase1"></target>
+<target name="phase1" depends="properties, folders"></target>
 
-    <!-- Tests & docs -->
-    <target name="phase3" depends="phase2"></target>
+<!-- Source code checks -->
+<target name="phase2" depends="phase1, phplint.check"></target>
 
-    <!-- Metrics -->
-    <target name="phase4" depends="phase3"></target>
+<!-- Tests & docs -->
+<target name="phase3" depends="phase2"></target>
 
-    <!-- Packaging -->
-    <target name="phase5" depends="phase4, debian"></target>
+<!-- Metrics -->
+<target name="phase4" depends="phase3, phploc.analyze"></target>
 
-    <target name="final" depends="phase5"></target>
+<!-- Packaging -->
+<target name="phase5" depends="phase4, tarball.make, debian"></target>
+
+
+<target name="final" depends="phase5"></target>
 
 </project>
