--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -5,7 +5,7 @@
         {
             "Run":
             {
-                "Memo": ["Run.Service", "Run.Method", "Run.Call", "Time", "UID"]
+                "Memo": ["Run.Service", "Run.Method", "Run.Call", "Time"]
             }
         }
     },
