--- a/src/Options/Code/Flow/Application.json
+++ b/src/Options/Code/Flow/Application.json
@@ -47,7 +47,7 @@
             "Rendering":
             {
                 "Service":"View.HTML",
-                "Method":"Render"
+                "Method":"Pipeline"
             }
         },
         "NotFound":
