--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
 <property name="depends" value="php5-fpm (>=5.6.0) | php5-cli (>=5.6.0) | php5-cgi (>=5.6.0)"/>
 <property name="provides" value=", codeine, codeine-production"/>
 <property name="replaces" value="codeine-production"/>
+<property name="key" value=""/>
 
 <target name="phase1" depends="properties, folders"></target>
 
