--- a/src/skel/etc/nginx/sites-available/development.conf
+++ b/src/skel/etc/nginx/sites-available/development.conf
@@ -7,5 +7,5 @@ server
     set $Environment Development;
 
 	set $Backend 127.0.0.1:9000;
-    include /etc/nginx/conf.d/codeine;
+    include /etc/nginx/conf.d/codeine-development.nginx;
 }
