--- a/etc/nginx/sites-available/codeine-development.conf
+++ b/etc/nginx/sites-available/codeine-development.conf
@@ -7,5 +7,5 @@ server
 	root /var/www/$host/Public;
 
 	set $Backend 127.0.0.1:9000;
-    include /etc/nginx/conf.d/codeine;
+    include /etc/nginx/conf.d/codeine-development.nginx;
 }
