--- a/src/skel/etc/nginx/sites-available/production.conf
+++ b/src/skel/etc/nginx/sites-available/production.conf
@@ -15,5 +15,5 @@ server
     set $Environment Production;
 
 	set $Backend 127.0.0.1:9000;
-    include /etc/nginx/conf.d/codeine;
+    include /etc/nginx/conf.d/codeine-development.nginx;
 }
