Base64 URLSafe Fixes.

--- a/etc/nginx/sites-available/codeine-development.conf
+++ b/etc/nginx/sites-available/codeine-development.conf
@@ -1,12 +1,1 @@
-server
-{
-    listen  80;
-    listen [::]:80;
-	server_name *.local;
-
-    set $Environment Development;
-	root /var/www/$host/Public;
-
-	set $Backend 127.0.0.1:9000;
-    include /etc/nginx/conf.d/codeine-development.nginx;
-}
+/etc/nginx/sites-enabled/
