--- a/src/Assets/bower/trumbowyg/bower.json
+++ b/src/Assets/bower/trumbowyg/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "trumbowyg",
-  "version": "2.7.0",
+  "version": "2.7.1",
   "homepage": "https://github.com/Alex-D/Trumbowyg",
   "authors": [
     {
@@ -27,10 +27,12 @@
     "test",
     "tests",
     "src",
-    "Gulpfile.js",
+    "docs",
+    "banner.jpg",
+    "gulpfile.js",
     "package.json"
   ],
   "dependencies": {
-    "jquery": ">=1.7"
+    "jquery": ">=1.8"
   }
 }
