--- a/etc/nginx/conf.d/access-log-format.conf
+++ b/etc/nginx/conf.d/access-log-format.conf
@@ -1,1 +1,1 @@
-log_format codeine-access '$status $request_time $bytes_sent $request_length $remote_addr $time_local $host "$request" "$http_user_agent" "$http_referer"';
+log_format codeine-access '$time_local $status $request_time $bytes_sent $request_length $host "$request" $remote_addr "$http_user_agent" "$http_referer"';
