--- a/src/Assets/bower/trumbowyg/bower.json
+++ b/src/Assets/bower/trumbowyg/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "trumbowyg",
-  "version": "2.9.2",
+  "version": "2.9.4",
   "homepage": "https://github.com/Alex-D/Trumbowyg",
   "authors": [
     {
@@ -28,6 +28,7 @@
     "tests",
     "src",
     "docs",
+    "sponsors",
     "banner.jpg",
     "gulpfile.js",
     "package.json"
