--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ nbdist/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea/*
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
