--- a/src/composer.json
+++ b/src/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "trickyplan/codeine",
     "require": {
-        "mongodb/mongodb": "^1.4.2",
-        "guzzlehttp/guzzle": "^6.3"
+        "mongodb/mongodb": "^1.4.2"
     }
 }
