--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 <property name="homepage" value="https://codeine-framework.org"/>
 <property name="maintainer" value="Johnny Funt"/>
 <property name="destination-source" value="/usr/share/php/Codeine"/>
-<property name="depends" value="php7.3-fpm (>=7.3) | php7.3-cli (>=7.3) | php7.3-cgi (>=7.3), php7.3-mbstring (>=7.3), php7.3-xml (>=7.3), php7.3-curl (>=7.3)"/>
+<property name="depends" value="php7.3-fpm (>=7.3) | php7.3-cli (>=7.3) | php7.3-cgi (>=7.3), php7.3-mbstring (>=7.3), php7.3-xml (>=7.3), php7.3-curl (>=7.3), geoip-database-extra"/>
 <property name="provides" value=", codeine, codeine-production"/>
 <property name="replaces" value="codeine-production"/>
 <property name="key" value=""/>
